# inv3_plugins

./: .gitignore  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  cmake_install.cmake
change_spacing/: gui.py  main.py  plugin.json
change_surface_lighting_properties/: gui.py  main.py  plugin.json
import_eeg_coordinates/: gui.py  plugin.json
import_world_coordinates/: gui.py  main.py  plugin.json
mask_morphology/: gui.py  main.py  plugin.json
mask_statistics/: __init__.py  main.py  plugin.json
overlay_functional/: func_overlay.py  gui.py
porous_creation/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  floodfill.pyx  floodfill_voronoi.cpp  floodfill_voronoi.cxx  floodfill_voronoi.pyx  floodfill_voronoi.vcxproj  floodfill_voronoi.vcxproj.filters  gui.py  main.py  plugin.json  schwarzp.py  setup.py
porous_creation/Release/: floodfill_voronoi.exp  floodfill_voronoi.lib
porous_creation/floodfill_voronoi.dir/Release/: floodfill_voronoi.cp312-win_amd64.pyd.recipe
porous_creation/floodfill_voronoi.dir/Release/floodfil.1DDC2994.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  floodfill_voronoi.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
remove_non_visible_faces/: gui.py  plugin.json  remove_non_visible_faces.py
remove_tiny_objects/: CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  count.cpp  count.cxx  count.pyx  gui.py  (+5 more)
(+18 files in other folders)
